--- a/ohcgo/static/css/ohc.css
+++ b/ohcgo/static/css/ohc.css
@@ -26,7 +26,13 @@ body {
 }
 
 a {
+	background: transparent;
 	color: #5e5ed0;
+	-webkit-transition: .3s ease-in-out;
+	   -moz-transition: .3s ease-in-out;
+	    -ms-transition: .3s ease-in-out;
+	     -o-transition: .3s ease-in-out;
+	        transition: .3s ease-in-out;
 }
 
 a:hover,
